<resources>
    <string name="app_name">Scuba Scan</string>
    <string name="app_title_string">Scuba Scan</string>
    <string name="log_in_button_string">Log me in</string>
    <string name="sign_up_button_string">Sign me up</string>
    <string name="enter_email_hint_string">Enter your e-mail</string>
    <string name="enter_password_hint_string">Enter your password</string>
    <string name="confirm_password_hint_string">Confirm your password</string>
    <string name="sign_me_out_button_string">Sign me out</string>
    <string name="auth_failed">Something went wrong there…</string>
    <string name="emailpassword_status_fmt">Logged in on: %s</string>
    <string name="firebase_status_fmt">Your magical code is: %s</string>
    <string name="signed_out">Youre signed out</string>
    <string name="go_menu_button_string">Dive into App</string>
    <string name="enter_username_hint_string">How shall I address you?</string>
    <string name="frag_firstnewdive_title">General Dive Info</string>
    <string name="frag_firstnewdive_date_string">Date of dive</string>
    <string name="frag_firstnewdive_country_string">Country</string>
    <string name="frag_firstnewdive_divespot_string">Dive spot</string>
    <string name="frag_firstnewdive_buddy_string">Dive buddy</string>
    <string name="frag_secondnewdive_title">Circumstances</string>
    <string name="frag_secondnewdive_temp_string">Temperature</string>
    <string name="frag_secondnewdive_temp_air_string">Air</string>
    <string name="frag_secondnewdive_temp_surface_string">Surface</string>
    <string name="frag_secondnewdive_temp_bottom_string">Bottom</string>
    <string name="frag_secondnewdive_watertype_string">Water type</string>
    <string name="frag_secondnewdive_watertype_sweet_string">Sweet</string>
    <string name="frag_secondnewdive_watertype_salty_string">Salty</string>
    <string name="frag_secondnewdive_visibility_string">Visibility</string>
    <string name="frag_secondnewdive_divetype_string">Dive type</string>
    <string name="frag_secondnewdive_divetype_shore_string">Shore</string>
    <string name="frag_secondnewdive_divetype_boat_string">Boat</string>
    <string name="frag_thirdnewdive_title">Equipment</string>
    <string name="thirdnewfrag_clothing_string">Clothing</string>
    <string name="frag_thirdtnewdive_lead_string">Amount of lead</string>
    <string name="lead_hint">. . . kg</string>
    <string name="frag_fourthnewdive_title">Technical Data</string>
    <string name="rag_fourthnewdive_timein_string">Time in:</string>
    <string name="rag_fourthnewdive_timeout_string">Time out:</string>
    <string name="frag_fourthnewdive_pressurein_string">Pressure in</string>
    <string name="frag_fourthnewdive_depth_string">Max Depth:</string>
    <string name="frag_fourthnewdive_safety_string">Safety stop</string>
    <string name="frag_fourthnewdive_yes_string">Yes</string>
    <string name="frag_fourthnewdive_no_string">No</string>
    <string name="frag_fifthnewdive_title">Personal notes</string>
    <string name="firstfinishedfragment_editbutton">Edit general data</string>
    <string name="thirdfinishedfragment_editbutton">Edit equipment data</string>
    <string name="fourthfinishedfragment_editbutton">Edit technical data</string>
    <string name="fifthfinishedfragment_editbutton">Edit personal data</string>
    <string name="statistics_title_string">Your Statistics</string>
    <string name="stats_username_string">Username</string>
    <string name="stats_number_dives">0</string>
    <string name="stats_diveamount_string">Dives made</string>
    <string name="stats_dived_for_string">Dived for</string>
    <string name="stats_days_string">0</string>
    <string name="stats_days">Day(s)</string>
    <string name="stats_hours_input_string">0</string>
    <string name="stats_hours_string">Hour(s)</string>
    <string name="stats_minutes_input_string">0</string>
    <string name="stats_minutes_string">Minute(s)</string>
    <string name="date_hint">dd-mm-yyyy</string>
    <string name="country_hint">e.g. Australia</string>
    <string name="dive_spot_hint">e.g. Great Barrier Reef</string>
    <string name="buddy_hint">e.g. John</string>
    <string name="temp_hint">. . . Celcius</string>
    <string name="visability_hint">. . . meter</string>
    <string name="time_hint">00:00</string>
    <string name="pressure_hint">. . . bar</string>
    <string name="notes_hint">Add your personal notes here...</string>
    <string name="home_signup_title">Signing up</string>
    <string name="home_signup_instr">Welcome! Enter your e-mail and password to sign up.</string>
    <string name="home_passconfirm_visible">visible</string>
    <string name="home_login_title">Logging in</string>
    <string name="home_login_instr">Welcome back! You know the drill: e-mail and password to continue.</string>
    <string name="home_passconfirm_invisible">invisible</string>
    <string name="backnav_exit_warning">Press Back again to Exit.</string>
    <string name="login_signupbutton_text">Sign me up!</string>
    <string name="login_loginbutton_text">Log me in!</string>
    <string name="login_stilllogedin_instr">Still logged in! Swim on...</string>
    <string name="login_loggedin_newinstr">Logged in successfully!</string>
    <string name="login_signedup_newinstr">Signed in succesfully!</string>
    <string name="login_passrequirement">Password must be 6 characters</string>
    <string name="login_email_requirement">Invalid e-mail!</string>
    <string name="required">Required.</string>
    <string name="login_maxchar_requirement">Maximum of 15 characters</string>
    <string name="login_no_pass_match">Passwords don\'t match!</string>
    <string name="intent_newdive">Logging a new dive...</string>
    <string name="intent_divelog">Opening dive log...</string>
    <string name="intent_statistics">Showing statistics...</string>
    <string name="intent_nitrogen">Showing nitrogen levels...</string>
    <string name="saved_data">Saved data!</string>
    <string name="first">first</string>
    <string name="second">second</string>
    <string name="third">third</string>
    <string name="dialog_1">"Dived for "</string>
    <string name="dialog_2">" minutes. "</string>
    <string name="dialog_3">"Nitrogen level upon resurfacing was "</string>
    <string name="dialog_4">" Nitrogen level now is "</string>
    <string name="dialog_5">"Nitrogen level upon entering the water was "</string>
    <string name="dialog_6">. Nitrogen level Z can be very dangerous! Make sure you\'ve made a safety stop and be wary of decompression sickness.</string>
    <string name="dive">"Dive "</string>
    <string name="edited_data">Edited data!</string>
    <string name="nitrogen_toast1">"Nitrogen-free in "</string>
    <string name="nitrogen_toast2">" minutes!"</string>
    <string name="current_nitrogen_text">Your current nitrogen level is...</string>
    <string name="recal_level">Recalculated level!</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="no_safety">no safety stop.</string>
    <string name="safety"><![CDATA[</b>a<b> safety stop.]]></string>
    <string name="invalid_date">Invalid date.</string>
    <string name="invalid_checkbox">Don\'t forget the checkboxes!.</string>
    <string name="invalid_time">Invalid time.</string>
    <string name="invalid_depth">Maximum depth is 40 meter</string>
    <string name="invalid_safertystop">Fill in safety stop!</string>
    <string name="timer_set">Timer was set!</string>
    <string name="no_timer_set">No timers set</string>
    <string name="nitrogen_free_notification">You are nitrogen free!</string>
    <string name="app_title">Scuba Scan</string>
    <string name="nitrogen_update_notification">Nitrogen update!</string>


</resources>
