<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background3">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:text="@string/statistics_title_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/statistics_title"
        android:textSize="30sp"
        android:textColor="#000000"
        android:gravity="center"
        android:padding="10dp"
        android:background="#CCFFFFFF"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="30dp">

        <TextView
            android:text="@string/stats_username_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/username_text"
            android:textColor="#000000"
            android:textSize="30sp"
            android:layout_weight="0.5"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="#6629a77e"
            android:padding="10dp">

            <TextView
                android:text="@string/stats_number_dives"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/number_dives"
                android:textColor="#000000"
                android:textSize="70sp"
                android:layout_weight="1" />

            <TextView
                android:text="@string/stats_diveamount_string"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:id="@+id/dives_made_text"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:text="@string/stats_dived_for_string"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dived_for_text"
        android:textSize="20sp"
        android:textColor="#000000"
        android:padding="20dp"
        android:background="#60FFFFFF"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:background="#66238d5a"
            android:padding="5dp">

            <TextView
                android:text="@string/stats_days_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/days_input_text"
                android:textColor="#000000"
                android:textSize="70sp"
                />

            <TextView
                android:text="@string/stats_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/days_text"
                android:textSize="20sp"
                android:textColor="#000000"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:background="#662fc9ae"
            android:padding="5dp">

            <TextView
                android:text="@string/stats_hours_input_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/hours_input_text"
                android:textColor="#000000"
                android:textSize="70sp" />

            <TextView
                android:text="@string/stats_hours_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/hours_text"
                android:textSize="20sp"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:background="#662ddbcd"
            android:padding="5dp">

            <TextView
                android:text="@string/stats_minutes_input_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/minutes_input_text"
                android:textColor="#000000"
                android:textSize="70sp" />

            <TextView
                android:text="@string/stats_minutes_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/minutes_text"
                android:textSize="20sp"
                android:textColor="#000000" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>