<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:text="@string/frag_secondnewdive_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000000"
        android:id="@+id/frag_secondnewdive_title"
        android:paddingBottom="20dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/check_box_grey_192x192"
            android:id="@+id/data_saved_image2"
            android:visibility="invisible"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:text="@string/frag_secondnewdive_temp_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:id="@+id/frag_secondnewdive_temp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
                />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:text="@string/frag_secondnewdive_temp_air_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:id="@+id/frag_secondnewdive_temp_air"
                    android:paddingLeft="40dp"/>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:textSize="15sp"
                    android:hint="@string/temp_hint"
                    android:textColorHint="#00202E"
                    android:textColor="#000000"
                    android:id="@+id/newdive_temp_air_input" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:text="@string/frag_secondnewdive_temp_surface_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:id="@+id/frag_secondnewdive_temp_surface"
                    android:paddingLeft="40dp"/>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:textSize="15sp"
                    android:hint="@string/temp_hint"
                    android:textColorHint="#00202E"
                    android:textColor="#000000"
                    android:id="@+id/newdive_temp_surface_input" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:text="@string/frag_secondnewdive_temp_bottom_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:id="@+id/frag_secondnewdive_temp_bottom"
                    android:paddingLeft="40dp"/>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:textSize="15sp"
                    android:hint="@string/temp_hint"
                    android:textColorHint="#00202E"
                    android:textColor="#000000"
                    android:id="@+id/newdive_temp_bottom_input" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:text="@string/frag_secondnewdive_visibility_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:id="@+id/frag_secondnewdive_visibility" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:textSize="15sp"
                    android:hint="@string/visability_hint"
                    android:textColorHint="#00202E"
                    android:textColor="#000000"
                    android:id="@+id/newdive_visibility_input" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:text="@string/frag_secondnewdive_watertype_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:id="@+id/frag_secondnewdive_watertype" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.350" />

                <CheckBox
                    android:text="@string/frag_secondnewdive_watertype_sweet_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/frag_secondnewdive_checkbox_sweet"
                    android:buttonTint="#000000"
                    android:layout_weight="0.325"
                    android:textColor="#000000"/>

                <CheckBox
                    android:text="@string/frag_secondnewdive_watertype_salty_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/frag_secondnewdive_checkbox_salty"
                    android:buttonTint="#000000"
                    android:layout_weight="0.325"
                    android:textColor="#000000" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:text="@string/frag_secondnewdive_divetype_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:id="@+id/frag_secondnewdive_divetype" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.38" />

                <CheckBox
                    android:text="@string/frag_secondnewdive_divetype_shore_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/frag_secondnewdive_checkbox_shore"
                    android:buttonTint="#000000"
                    android:layout_weight="0.31"
                    android:textColor="#000000"/>

                <CheckBox
                    android:text="@string/frag_secondnewdive_divetype_boat_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/frag_secondnewdive_checkbox_boat"
                    android:buttonTint="#000000"
                    android:layout_weight="0.31"
                    android:textColor="#000000" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:text="Save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/frag_secondnewdive_button" />

        </LinearLayout>
    </FrameLayout>

</LinearLayout>